@@ -1,6 +1,5 @@
 package io.github.matheusfy.screanmatch.service;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import io.github.matheusfy.screanmatch.model.Episodio;
 import io.github.matheusfy.screanmatch.model.dtos.EpisodioDTO;
 import io.github.matheusfy.screanmatch.model.dtos.DadosFilmeDTO;
@@ -12,29 +11,24 @@ import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class ConsumoApi {
-    private HttpClient client;
-    private ObjectMapper mapper;
-    private ConverterDados conversor;
+    private final HttpClient client;
+    private final ConverterDados conversor;
 
     public ConsumoApi(){
         this.client  = HttpClient.newHttpClient();
-        this.mapper = new ObjectMapper();
         this.conversor  = new ConverterDados();
     }
 
     private HttpRequest buildRequest(String uri){
-        HttpRequest request = HttpRequest.newBuilder().uri(URI.create(uri)).GET().build();
-        return request;
+        return HttpRequest.newBuilder().uri(URI.create(uri)).GET().build();
     }
 
     private HttpResponse<String> sendRequest(HttpRequest request){
-        HttpResponse<String> response = null;
+        HttpResponse<String> response;
         try {
             response = client.send(request, HttpResponse.BodyHandlers.ofString());
         } catch (IOException | InterruptedException e) {
@@ -46,31 +40,30 @@ public class ConsumoApi {
     private String buildAndSendRequest(String uri){
         HttpResponse<String> response = sendRequest(buildRequest(uri));
         if (response!=null) {
-            return response.body().toString();
+            return response.body();
         }
         return "";
     }
 
-    public void obterDado(String apiUri){
+    public void  obterDado(String apiUri){
 
         String json = buildAndSendRequest(apiUri);
         String tipo = conversor.getType(json);
 
-        switch (tipo){
-            case "series":
+        switch (tipo) {
+            case "series" -> {
                 SerieDTO serie = conversor.obterDados(json, SerieDTO.class);
                 System.out.println("Informação serie: " + serie.toString());
-                if (serie.totalTemporadas() != "N/A"){
-                    List<TemporadaDTO> lstTemporadas= getTemporadas(apiUri, conversor.strToInt(serie.totalTemporadas()));
-//                    getMelhoresEpisodios(lstTemporadas);
-                    getEpisodios(lstTemporadas);
+                if (!serie.totalTemporadas().equals("N/A")) {
+                    List<TemporadaDTO> lstTemporadas = getTemporadas(apiUri, conversor.strToInt(serie.totalTemporadas()));
+                    List<Episodio> episodios = getEpisodios(lstTemporadas);
+                    System.out.println(episodios);
                 }
-
-                break;
-            case "movie":
+            }
+            case "movie" -> {
                 DadosFilmeDTO filme = conversor.obterDados(json, DadosFilmeDTO.class);
                 System.out.println(filme.toString());
-                break;
+            }
         }
 
     }
@@ -93,22 +86,27 @@ public class ConsumoApi {
         return lstTemporadas.stream()
                 .flatMap( t -> t.lstEpisodios().stream()
                         .map(e -> new Episodio(t.numero(), e)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<EpisodioDTO> getMelhoresEpisodios(List<TemporadaDTO> lstTemporadas) {
+    public List<EpisodioDTO> getMelhores5Episodios(List<TemporadaDTO> lstTemporadas) {
 
         List<EpisodioDTO> allEpisodes = lstTemporadas.stream()
                 .flatMap(temp -> temp.lstEpisodios().stream())
-                .collect(Collectors.toList());
+                .toList();
 
-        List<EpisodioDTO> betEpisodes = allEpisodes.stream()
+        return allEpisodes.stream()
                 .filter(e->!e.avaliacao().equalsIgnoreCase("N/A"))
                 .sorted(Comparator.comparing(EpisodioDTO::avaliacao).reversed())
                 .limit(5)
                 .collect(Collectors.toList());
+    }
 
-        return betEpisodes;
+    public Optional<Episodio> buscaEpisodio(String nomeEpisodio, List<Episodio> episodios){
+
+        return episodios.stream()
+                .filter(e -> e.getTitulo().contains(nomeEpisodio))
+                .findFirst();
     }
 
 }
